# swiftnav-multi

./: .gitignore  .gitmodules  README.md  read_sbp.py
c/: CMakeLists.txt  read_rtk.c
python/: base_default.bash  base_simulator.bash  config.ini  enable_simulator_mode.py  multi_tools.py  read_sbp.py  reset_multi.py  rover_default.bash  rover_moving_baseline.bash  rover_simulator.bash  serial_link.py  simulator_mode.bash  simulator_mode.ini  wite_from_ini_file.py
python/settings_files/: base_default.ini  base_moving_baseline.ini  base_simulator_mode.ini  rover_default.ini  rover_moving_baseline.ini  rover_simulator_mode.ini
